// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Calendar methods should render correctly 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
  width={301}
>
  <styled.div
    className=""
  >
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
  </styled.div>
</styled.div>
`;

exports[`#Calendar methods should render correctly with allowedDates 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
  width={301}
>
  <styled.div
    className=""
  >
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={
        Array [
          2018-03-10T00:00:00.000Z,
        ]
      }
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
  </styled.div>
</styled.div>
`;

exports[`#Calendar methods should render correctly with future enabled 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
  width={301}
>
  <styled.div
    className=""
  >
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={true}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={true}
      showWeekDayNames={true}
      weekDayFormat="E"
      width={301}
    />
  </styled.div>
</styled.div>
`;

exports[`#Calendar methods should render without month and week days names 1`] = `
<styled.div
  className="wrapper"
  visibleMonths={3}
  width={301}
>
  <styled.div
    className=""
  >
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-02-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={false}
      showWeekDayNames={false}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-03-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={false}
      showWeekDayNames={false}
      weekDayFormat="E"
      width={301}
    />
    <Styled(CalendarMonth)
      allowedDates={Array []}
      classes={Object {}}
      colors={
        Object {
          "background": "white",
          "border": "#e4e7e7",
          "disabled": "gray",
          "hover": "#e4e7e7",
          "selected": "rgb(244, 114, 49)",
          "selectedHover": "rgb(255, 141, 74)",
        }
      }
      customClasses={Object {}}
      disabledDates={Array []}
      future={false}
      hoveredDates={Array []}
      isFocused={false}
      month={2018-04-01T00:00:00.000Z}
      onHover={[Function]}
      past={true}
      selectDate={[Function]}
      selectedDates={Array []}
      showMonthName={false}
      showWeekDayNames={false}
      weekDayFormat="E"
      width={301}
    />
  </styled.div>
</styled.div>
`;
